--- a/leaderboard.css
+++ b/leaderboard.css
@@ -25,6 +25,10 @@ body
 	background-color: var(--dayBarBg);
 	color: #fff;
 	padding: 20px 0;
+	position: fixed;
+	top: 0;
+	left: 25%;
+	z-index: 99;
 	/* opacity: 0; */
 	/* margin-bottom: 10px; */
 }
@@ -50,7 +54,7 @@ body
 	width: 50%;
 	margin: 0 auto;
 	background: var(--bgColor);
-	height: 100vh;
+	height: 150vh;
 	position: relative;
 	/* padding-top: 5px; */
 }
